# Ezkl-ML

./: .gitignore  .tool-versions  Cargo.toml  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/: collateral_tiers.md
ezkl/: Cargo.toml  README.md  create_model.py  create_proof_registry.rs  ezkl_script.rs  run_ezkl.sh  run_ezkl_common.sh  run_ezkl_individual.sh  run_ezkl_verify.sh
ezkl/script/: create_model.py  run_ezkl.py
ezkl/src/: direct_ezkl.rs  main.rs  onnx_converter.rs  proof_registry.rs  script_generator.rs  utils.rs
src/: main.rs
synthetic_data/: README.md
synthetic_data/src/: lib.rs  main.rs  model_trainer.rs  synthetic_data.rs
