[package]
name = "ezkl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
sha2 = "0.10"
hex = "0.4"
synthetic_data = { path = "../synthetic_data" }
colored = "2.0"
chrono = "0.4"
which = "4.4"
log = "0.4"
env_logger = "0.10"
